# decentrolized-storage-system-benchmark

./: .gitignore  README-BENCHMARK-LOG  README-UPDATE.md  README.md  main.py  pyproject.toml
configs/: minio-cog-smoke.toml  minio-full.toml  minio-matrix.toml  minio-smoke.toml  minio-vps-smoke.toml
src/storage_benchmark/: __init__.py  cli.py  cog_gdal.py  config.py  gdal_client.py  io_basic.py  metrics.py  plotting.py  reporting.py  s3_client.py
tests/: conftest.py  test_cli.py  test_cog_gdal.py  test_config.py  test_gdal_client.py  test_io_basic.py  test_metrics.py  test_plotting.py  test_reporting.py
