[project]
name = "decentrolized-storage-system-benchmark"
version = "0.1.0"
description = "Object storage benchmark for remote sensing workloads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
]

[project.scripts]
storage-benchmark = "storage_benchmark.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/storage_benchmark"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
